--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -64,7 +64,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "#bla"
       ],
       "execution_count": null,
       "outputs": []
