--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Cópia de python_exercises_02.ipynb",
+      "name": "Cópia de python_exercises_02_MarcosNogueira.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -64,10 +64,39 @@
         "colab": {}
       },
       "source": [
-        "#bla"
+        "def funcao(n):\n",
+        "  if float(n)<=0:\n",
+        "    print(\"N\")\n",
+        "  else:\n",
+        "    print(\"P\")  "
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DhXQnNvb-w3Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "90a2ab16-bba9-4ff5-89a5-49d6b9b0f552"
+      },
+      "source": [
+        "funcao(0)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "N\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -84,13 +113,32 @@
       "metadata": {
         "id": "A3ajzaOSq69B",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "71816fd6-207f-4740-f76e-d96984ce594f"
       },
       "source": [
-        ""
+        "nome = input(\"nome: \")\n",
+        "senha = input(\"senha: \")\n",
+        "if str(nome) == str(senha):\n",
+        "  print(\"Erro: sua senha não pode ser igual ao seu nome de usuário\")\n",
+        "else:  \n",
+        "  print(\"Bem-Vindo\")\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "nome: marcosemn\n",
+            "senha: 3\n",
+            "Bem-Vindo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,13 +185,54 @@
       "metadata": {
         "id": "kTg-D89NdCld",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "a264af60-3d63-4e39-fd0b-a94dc163154e"
       },
       "source": [
-        ""
+        "resp1 = input(\"Telefonou para a vítima? \")\n",
+        "resp2 = input(\"Esteve no local do crime? \")\n",
+        "resp3 = input(\"Mora perto da vítima? \")\n",
+        "resp4 = input(\"Devia para a vítima? \")\n",
+        "resp5 = input(\"Já trabalhou com a vítima? \")\n",
+        "\n",
+        "lista_resp = [resp1,resp2,resp3,resp4,resp5]\n",
+        "lista_n = []\n",
+        "\n",
+        "for i in lista_resp:\n",
+        "  if i==\"Não\":\n",
+        "    lista_n.append(0)\n",
+        "  else:\n",
+        "    lista_n.append(1)\n",
+        "\n",
+        "soma = lista_n[0]+lista_n[1]+lista_n[2]+lista_n[3]+lista_n[4]\n",
+        "\n",
+        "if soma==2:\n",
+        "  print('A pessoa é Suspeita')\n",
+        "elif soma==4 or soma==3:\n",
+        "  print('A pessoa é Cúmplice')\n",
+        "elif soma==5:\n",
+        "  print('A pessoa é Assassina')\n",
+        "else:\n",
+        "  print('A pessoa é Inocente')    "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Telefonou para a vítima? Sim\n",
+            "Esteve no local do crime? Sim\n",
+            "Mora perto da vítima? Sim\n",
+            "Devia para a vítima? Não\n",
+            "Já trabalhou com a vítima? Sim\n",
+            "A pessoa é Cúmplice\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,9 +252,9 @@
         "colab": {}
       },
       "source": [
-        "['Maria','João','Marcelo','Jonas','Laura','Luana']"
+        "lista_nomes = ['Maria','João','Marcelo','Jonas','Laura','Luana']"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -173,13 +262,31 @@
       "metadata": {
         "id": "0sRr8MXCpbGP",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "7919fa9b-d1f1-43b0-b7f0-749fac9271e0"
       },
       "source": [
-        ""
+        "for nome in lista_nomes:\n",
+        "  print(f\"{nome} é aluno da classe\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Maria é aluno da classe\n",
+            "João é aluno da classe\n",
+            "Marcelo é aluno da classe\n",
+            "Jonas é aluno da classe\n",
+            "Laura é aluno da classe\n",
+            "Luana é aluno da classe\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -200,9 +307,9 @@
         "colab": {}
       },
       "source": [
-        "[23,34,42,54,26,27]"
+        "lista_idade = [23,34,42,54,26,27] "
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -213,10 +320,81 @@
         "colab": {}
       },
       "source": [
-        ""
+        "lista_geral = zip(lista_nomes,lista_idade)\n",
+        "lista_geral = list(lista_geral)\n",
+        "minha_lista = {}\n",
+        "for i in lista_geral:\n",
+        "  minha_lista[i[0]]= {}\n",
+        "  minha_lista[i[0]]['idade']=i[1]\n"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aMDN94FRfTyZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "4c2e4224-186e-4455-f85e-ec77f9859ca5"
+      },
+      "source": [
+        "minha_lista"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jonas': {'idade': 54},\n",
+              " 'João': {'idade': 34},\n",
+              " 'Laura': {'idade': 26},\n",
+              " 'Luana': {'idade': 27},\n",
+              " 'Marcelo': {'idade': 42},\n",
+              " 'Maria': {'idade': 23}}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ScPElNzEd7Yf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "8f3b4a64-0324-43a8-ff03-9f81b8617691"
+      },
+      "source": [
+        "for i in minha_lista.keys():\n",
+        "  print(f'{i} tem {minha_lista[i][\"idade\"]} anos')"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Maria tem 23 anos\n",
+            "João tem 34 anos\n",
+            "Marcelo tem 42 anos\n",
+            "Jonas tem 54 anos\n",
+            "Laura tem 26 anos\n",
+            "Luana tem 27 anos\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -233,13 +411,26 @@
       "metadata": {
         "id": "MNINJ32eU45M",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b4d913b7-6dba-4bfc-ee6b-879f4652580e"
       },
       "source": [
-        ""
+        "lista_geral = zip(lista_nomes,lista_idade)\n",
+        "print(dict(lista_geral))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'Maria': 23, 'João': 34, 'Marcelo': 42, 'Jonas': 54, 'Laura': 26, 'Luana': 27}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
