--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -187,9 +187,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 134
         },
-        "outputId": "a264af60-3d63-4e39-fd0b-a94dc163154e"
+        "outputId": "cf318944-f13c-48a3-a685-0f7536413335"
       },
       "source": [
         "resp1 = input(\"Telefonou para a vítima? \")\n",
@@ -208,6 +208,7 @@
         "    lista_n.append(1)\n",
         "\n",
         "soma = lista_n[0]+lista_n[1]+lista_n[2]+lista_n[3]+lista_n[4]\n",
+        "print(f'A pessoa teve {soma} resposta(s) positiva(s).')\n",
         "\n",
         "if soma==2:\n",
         "  print('A pessoa é Suspeita')\n",
@@ -218,17 +219,18 @@
         "else:\n",
         "  print('A pessoa é Inocente')    "
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Telefonou para a vítima? Sim\n",
-            "Esteve no local do crime? Sim\n",
-            "Mora perto da vítima? Sim\n",
+            "Telefonou para a vítima? Não\n",
+            "Esteve no local do crime? Não\n",
+            "Mora perto da vítima? Não\n",
             "Devia para a vítima? Não\n",
-            "Já trabalhou com a vítima? Sim\n",
-            "A pessoa é Cúmplice\n"
+            "Já trabalhou com a vítima? Não\n",
+            "A pessoa teve 0 respostas positivas.\n",
+            "A pessoa é Inocente\n"
           ],
           "name": "stdout"
         }
