--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -159,10 +159,56 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def lista():\n",
+        "  lista = [5,4,3,2,1]\n",
+        "  soma=0\n",
+        "  for i in lista:\n",
+        "    soma = soma+i\n",
+        "\n",
+        "  media= soma/len(lista)\n",
+        "\n",
+        "  if len(lista)%2==1:\n",
+        "    med=lista[int(len(lista)/2)]\n",
+        "  else:\n",
+        "    med=(lista[int(len(lista)/2)]+lista[int(len(lista)/2)-1])/2\n",
+        "\n",
+        "  return f'A média é {media} e a mediana é {med}.'    "
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IwwQsVyINdp6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c06d023e-8b7b-4144-e664-ac35177bd2b1"
+      },
+      "source": [
+        "lista()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'A média é 3.0 e a mediana é 3.'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
