--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -159,6 +159,7 @@
         "colab": {}
       },
       "source": [
+        "#questão do ordenamento ainda mal definida\n",
         "def lista():\n",
         "  lista = [5,4,3,2,1]\n",
         "  soma=0\n",
