--- a/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_02_MarcosNogueira.ipynb
@@ -159,23 +159,22 @@
         "colab": {}
       },
       "source": [
-        "#questão do ordenamento ainda mal definida\n",
-        "def lista():\n",
-        "  lista = [5,4,3,2,1]\n",
+        "def lista(lista):\n",
+        "  lista_ordenada=sorted(lista)\n",
         "  soma=0\n",
-        "  for i in lista:\n",
+        "  for i in lista_ordenada:\n",
         "    soma = soma+i\n",
         "\n",
-        "  media= soma/len(lista)\n",
+        "  media= soma/len(lista_ordenada)\n",
         "\n",
-        "  if len(lista)%2==1:\n",
-        "    med=lista[int(len(lista)/2)]\n",
+        "  if len(lista_ordenada)%2==1:\n",
+        "    med=lista_ordenada[int(len(lista_ordenada)/2)]\n",
         "  else:\n",
-        "    med=(lista[int(len(lista)/2)]+lista[int(len(lista)/2)-1])/2\n",
+        "    med=(lista_ordenada[int(len(lista_ordenada)/2)]+lista_ordenada[int(len(lista_ordenada)/2)-1])/2\n",
         "\n",
         "  return f'A média é {media} e a mediana é {med}.'    "
       ],
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -187,12 +186,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c06d023e-8b7b-4144-e664-ac35177bd2b1"
+        "outputId": "b58aa987-9add-4557-fb90-95271d92daf0"
       },
       "source": [
-        "lista()"
+        "lista_ex=[3,5,4,2,1]\n",
+        "lista(lista_ex)"
       ],
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 27
         }
       ]
     },
