--- a/Cópia_de_python_exercises_03_MarcosNogueira.ipynb
+++ b/Cópia_de_python_exercises_03_MarcosNogueira.ipynb
@@ -77,7 +77,7 @@
         "    self.cor=input(\"Qual a cor da bola? \")\n",
         "    print(f'A cor da bola agora é {self.cor}.')\n"
       ],
-      "execution_count": 3,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
       "source": [
         "voadora=bola(\"borracha\")"
       ],
-      "execution_count": 4,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -102,18 +102,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "84c78289-2d35-4b2b-812f-beedd278fd5b"
+        "outputId": "153356dc-da33-4fe1-be4b-da458a6858d8"
       },
       "source": [
         "voadora.trocaCor()"
       ],
-      "execution_count": 5,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual a cor da bola? preta\n",
-            "A cor da bola agora é preta.\n"
+            "Qual a cor da bola? verde\n",
+            "A cor da bola agora é verde.\n"
           ],
           "name": "stdout"
         }
@@ -149,7 +149,7 @@
         "    area=float(self.lado)**2\n",
         "    print(f' A área do quadrado é {area}.')  "
       ],
-      "execution_count": 11,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -161,19 +161,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "479b384d-c9d8-4df6-a259-2c81ffbae081"
+        "outputId": "8f2c6831-08b9-4ff8-ca1f-c57d6e6b3fb2"
       },
       "source": [
         "square=quadrado()\n",
         "square.area()"
       ],
-      "execution_count": 12,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual o lado do quadrado? 90\n",
-            " A área do quadrado é 8100.0.\n"
+            "Qual o lado do quadrado? 89\n",
+            " A área do quadrado é 7921.0.\n"
           ],
           "name": "stdout"
         }
@@ -211,7 +211,7 @@
         "    self.salario=self.salario*(1+aumento)\n",
         "    print(f'O novo salário de {self.nome} é R$ {self.salario}.')  "
       ],
-      "execution_count": 18,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "morty = func(\"morty\",\"assistente\",40000)\n",
         "rick = func(\"rick\",\"boss\",1000000)"
       ],
-      "execution_count": 20,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -237,13 +237,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "54fff4b7-961d-457d-8cd3-36d86c3411f4"
+        "outputId": "f937d4e2-bf60-4ab7-8a51-89f4bd807116"
       },
       "source": [
         "morty.aumento()\n",
         "rick.aumento(0.2)"
       ],
-      "execution_count": 21,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         " 'Mikkel': {'altura': 1.56, 'imc': 28, 'peso': 67, 'sexo': 'M'},\n",
         " 'Ulrich': {'altura': 1.92, 'imc': 22, 'peso': 80, 'sexo': 'M'}}"
       ],
-      "execution_count": 22,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 23,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "  peso=clientes[i][\"peso\"]\n",
         "  lista_peso.append(peso)  "
       ],
-      "execution_count": 36,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -335,7 +335,7 @@
         "df_altura=np.array(lista_altura)\n",
         "df_peso = np.array(lista_peso)"
       ],
-      "execution_count": 40,
+      "execution_count": 116,
       "outputs": []
     },
     {
@@ -347,12 +347,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "48554848-68e9-490f-f682-9c793f87cefa"
+        "outputId": "ad999cc4-cba9-4f5f-d3cb-33a358f598ec"
       },
       "source": [
-        "round(np.mean(df_imc,0),2)"
+        "round(df_imc.mean(),2)"
       ],
-      "execution_count": 42,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 117
         }
       ]
     },
@@ -377,12 +377,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "29a5eeea-7990-434b-c3d7-a81e34bd37a5"
+        "outputId": "8f822f4f-bd04-4749-e18a-63f3cd69d756"
       },
       "source": [
-        "round(np.mean(df_altura,0),2)\n"
+        "round(df_altura.mean(),2)\n"
       ],
-      "execution_count": 43,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 118
         }
       ]
     },
@@ -407,12 +407,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "50393d4f-3094-40de-97eb-e9ef2bd21097"
+        "outputId": "fc995fbb-d594-48f0-f4fe-563980bd82a6"
       },
       "source": [
-        "round(np.mean(df_peso,0),2)"
+        "round(df_peso.mean(),2)"
       ],
-      "execution_count": 44,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +424,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 119
         }
       ]
     },
@@ -437,12 +437,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "811a59f9-9f32-4c7a-81f5-4413bc0982e2"
+        "outputId": "9a0674e4-8e76-4066-f9f8-d01af5c0d46b"
       },
       "source": [
-        "round(np.std(df_imc,0),2)"
+        "round(df_imc.std(),2)"
       ],
-      "execution_count": 45,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +454,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 120
         }
       ]
     },
@@ -467,12 +467,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "71581a40-ebb6-4fa1-a540-dab64a826c75"
+        "outputId": "e7daae06-fc0b-473b-b81f-b5c068f5490c"
       },
       "source": [
-        "round(np.std(df_altura,0),2)"
+        "round(df_altura.std(),2)"
       ],
-      "execution_count": 46,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 121
         }
       ]
     },
@@ -497,12 +497,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a473b45e-fb17-47c2-c441-22bfc987626a"
+        "outputId": "d27b7825-4b6c-4c8e-c769-0d6244827b4e"
       },
       "source": [
-        "round(np.std(df_peso,0),2)"
+        "round(df_peso.std(),2)"
       ],
-      "execution_count": 47,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 122
         }
       ]
     },
@@ -527,12 +527,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0173a57a-5e22-490b-97f3-c4278f9c5d16"
+        "outputId": "9f52ab22-5c60-4092-8690-32197cae12bb"
       },
       "source": [
-        "round(np.median(df_imc,0),2)"
+        "round(np.median(df_imc),2)"
       ],
-      "execution_count": 48,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +544,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 123
         }
       ]
     },
@@ -557,12 +557,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5955ab9f-6026-4405-cb29-de7bee209a8c"
+        "outputId": "edad237d-4e59-484d-d295-993097a1a636"
       },
       "source": [
-        "round(np.median(df_altura,0),2)"
+        "round(np.median(df_altura),2)"
       ],
-      "execution_count": 49,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +574,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 124
         }
       ]
     },
@@ -587,12 +587,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b30d8227-2530-4cbf-bf65-050f2e45be97"
+        "outputId": "367b3f28-ab26-4439-d297-17e9d4028b15"
       },
       "source": [
-        "round(np.median(df_peso,0),2)"
+        "round(np.median(df_peso),2)"
       ],
-      "execution_count": 50,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 125
         }
       ]
     },
@@ -628,7 +628,7 @@
       "source": [
         "import statistics as st"
       ],
-      "execution_count": 51,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -640,24 +640,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e1d3cea8-6496-49eb-a7c6-29d86b9e2e58"
+        "outputId": "1fd8269f-4582-40b4-ce55-1d2d73f6d4c7"
       },
       "source": [
-        "st.mean(df_imc)"
+        "df_imc.mean()"
       ],
-      "execution_count": 52,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "22"
+              "22.666666666666668"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 127
         }
       ]
     },
@@ -670,12 +670,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "711fba48-d234-4fbc-9d4c-8fb840381565"
+        "outputId": "416ac9ad-925d-4629-a536-42f989a0177e"
       },
       "source": [
         "st.median(df_imc)"
       ],
-      "execution_count": 53,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,7 +687,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 128
         }
       ]
     },
@@ -700,24 +700,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a36ab86d-64d0-4237-d7b6-2520124885b4"
+        "outputId": "4b57c7bb-8014-4319-ff34-c426e853c319"
       },
       "source": [
-        "st.pstdev(df_imc)"
+        "df_imc.std()"
       ],
-      "execution_count": 55,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2.8284271247461903"
+              "2.981423969999719"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 129
         }
       ]
     },
@@ -730,24 +730,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "44ded01b-223d-43f2-cf6e-1108b1e3e8d5"
+        "outputId": "326e4159-b43f-4ee6-c575-c027c7e4471d"
       },
       "source": [
-        "st.mean(df_altura)"
+        "df_altura.mean()"
       ],
-      "execution_count": 56,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.69"
+              "1.6900000000000002"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 130
         }
       ]
     },
@@ -760,12 +760,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ab3d94fa-d3b2-48c9-f69d-392a84d5c5c5"
+        "outputId": "89e8a653-f786-4ae3-9829-42a35a0cd008"
       },
       "source": [
         "st.median(df_altura)"
       ],
-      "execution_count": 57,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 131
         }
       ]
     },
@@ -790,12 +790,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e4ba5b96-4ee5-4d29-9308-025074b36de4"
+        "outputId": "0c555092-f0ab-4982-8514-b55743910801"
       },
       "source": [
-        "st.pstdev(df_altura)"
+        "df_altura.std()"
       ],
-      "execution_count": 58,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +807,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 132
         }
       ]
     },
@@ -820,24 +820,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7827ce6d-3a39-40dd-b3b5-25dcd497b399"
+        "outputId": "3a09a275-acd4-40c8-ba92-0e499be06600"
       },
       "source": [
-        "st.mean(df_peso)"
+        "df_peso.mean()"
       ],
-      "execution_count": 59,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "64"
+              "64.83333333333333"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 133
         }
       ]
     },
@@ -850,12 +850,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0f14be6f-1064-4be3-8604-665c6da40abf"
+        "outputId": "3333b2b1-2ed7-42b6-aed2-52f701f4d260"
       },
       "source": [
         "st.median(df_peso)"
       ],
-      "execution_count": 60,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +867,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 134
         }
       ]
     },
@@ -880,24 +880,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6a2b5292-625c-4538-914f-4c11360f4b67"
+        "outputId": "3c71638a-1de2-4303-b6da-7ed52bfc5b30"
       },
       "source": [
-        "st.pstdev(df_peso)"
+        "df_peso.std()"
       ],
-      "execution_count": 61,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10.770329614269007"
+              "10.77677544021814"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 135
         }
       ]
     },
